# Backend-API-Pokemon

./: .env  .env.example  Dockerfile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pokemons.db  pyproject.toml  schemas.py
.github/workflows/: ci.yml
app/: crud.py  database.py  deps.py  main.py  models.py
app/cache/: cache_helpers.py  redis_client.py
app/core/: config.py
app/routers/: pokemons.py
app/services/: pokeapi.py
routers/: pokemons.py
services/: auth.py  pokeapi.py
tests/: conftest.py  test_auth_required.py  test_pagination.py  test_pokeapi_errors.py  test_pokeapi_service.py  test_pokemons_routes.py
